kubernetes/apps/security/zitadel/app/routes.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/grpcroute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: zitadel-app
spec:
  hostnames:
    - "${GATUS_DOMAIN:=${GATUS_SUBDOMAIN:=${APP}}.${DOMAIN_APP}}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https-id
  rules:
    - backendRefs:
      - name: zitadel
        port: 8080
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel-login
spec:
  hostnames:
    - "${GATUS_DOMAIN:=${GATUS_SUBDOMAIN:=${APP}}.${DOMAIN_APP}}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https-id
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ui/v2/login
      backendRefs:
        - name: zitadel-login
          port: 3000
